--- a/personality-ui/package.json
+++ b/personality-ui/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "ngx-smart-modal": "^7.4.1",
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.5.5",
